--- a/index.html
+++ b/index.html
@@ -90,4 +90,8 @@
      <img src="img/Motorhead-NoRemorse.jpeg" alt="Esta es una imagen alterna" height="250"/>
 
   </body>
+  <section>
+    <div>There</div>
+    <p>Hello</p>
+  </section>
 </html>
